--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "NODEboilerplate",
+  "name": "node-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -13,9 +13,16 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/baptiste-brdn/NODEboilerplate/issues"
   },
-  "homepage": "https://github.com/baptiste-brdn/NODEboilerplate#readme"
+  "homepage": "https://github.com/baptiste-brdn/NODEboilerplate#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "path": "^0.12.7"
+  }
 }
